[gd_scene load_steps=20 format=3 uid="uid://deymlppnnrqie"]

[ext_resource type="Texture2D" uid="uid://dpwsl7n22e4xj" path="res://Art Assets/Frog_1.png" id="1_eyb4t"]
[ext_resource type="Script" path="res://Script/frog2.gd" id="1_ha5q2"]
[ext_resource type="Texture2D" uid="uid://be2jg0yyog3pq" path="res://Art Assets/Frog_mouth.png" id="2_gxkh2"]
[ext_resource type="Script" path="res://Script/FrogIntro.gd" id="2_sguox"]
[ext_resource type="Texture2D" uid="uid://cwqphs7cxqhd1" path="res://Art Assets/Dialog3.png" id="3_6863y"]
[ext_resource type="AudioStream" uid="uid://gdj7hopm4ewa" path="res://Audio/FrogCroak.mp3" id="3_q0vnq"]
[ext_resource type="Texture2D" uid="uid://bjahu4hde6s5s" path="res://Art Assets/Frog_3.png" id="5_rl5cm"]
[ext_resource type="AudioStream" uid="uid://63nf6e7elmqu" path="res://Audio/Frog_Hungry.mp3" id="6_b3upw"]
[ext_resource type="Texture2D" uid="uid://oeisiuh4sdk0" path="res://Art Assets/Frog_2.png" id="6_n67tg"]
[ext_resource type="Texture2D" uid="uid://dkddx8rcmc04l" path="res://Art Assets/Puff_1.png" id="8_oub4g"]
[ext_resource type="Texture2D" uid="uid://pxwinehou34m" path="res://Art Assets/Puff_2.png" id="9_ha301"]
[ext_resource type="Texture2D" uid="uid://dcpjbi82772e4" path="res://Art Assets/Puff_3.png" id="10_leu6y"]
[ext_resource type="AudioStream" uid="uid://bvaxgv666hejl" path="res://Audio/Poof.mp3" id="11_ijy05"]
[ext_resource type="AudioStream" uid="uid://cjboelawekkbu" path="res://Audio/Frog_Gulp.mp3" id="12_1lde7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_b7ql0"]
radius = 143.014

[sub_resource type="Animation" id="Animation_1kweg"]
resource_name = "Puff"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Puff:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("8_oub4g"), ExtResource("8_oub4g"), ExtResource("9_ha301"), ExtResource("10_leu6y"), null]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xd8ab"]
_data = {
"Puff": SubResource("Animation_1kweg")
}

[sub_resource type="Animation" id="Animation_kccoe"]
resource_name = "tremble"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture Node/Frog:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("1_eyb4t"), ExtResource("5_rl5cm"), ExtResource("6_n67tg"), ExtResource("5_rl5cm"), ExtResource("1_eyb4t")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture Node:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(0.0358968, 0.0358968, 0.0358968, 0.0358968, 0.0358968, 0.0358968, 1, 0.0358968, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-25, 0), Vector2(0, 0), Vector2(-25, 0), Vector2(0, 0), Vector2(-25, 0), Vector2(0, 0), Vector2(-25, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f555i"]
_data = {
"tremble": SubResource("Animation_kccoe")
}

[node name="Frog" type="Node2D"]
script = ExtResource("1_ha5q2")

[node name="FrogIntro" type="Node2D" parent="."]
script = ExtResource("2_sguox")

[node name="Sprite2D" type="Sprite2D" parent="FrogIntro"]
position = Vector2(402, -109)
texture = ExtResource("3_6863y")

[node name="Label" type="Label" parent="FrogIntro/Sprite2D"]
offset_left = -243.0
offset_top = -41.0
offset_right = 751.0
offset_bottom = 66.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
text = "Try making a few more gold (1000G) and fix this place up (Upgrades)."

[node name="Button" type="Button" parent="FrogIntro/Sprite2D"]
modulate = Color(1, 1, 1, 0.592157)
offset_left = -222.0
offset_top = 3.0
offset_right = 254.0
offset_bottom = 46.0
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 23
text = "Next"
flat = true
alignment = 2

[node name="Texture Node" type="Node2D" parent="."]
z_index = -15

[node name="Pink" type="Sprite2D" parent="Texture Node"]
position = Vector2(37, 54)
scale = Vector2(2.6338, 1.73973)
texture = ExtResource("2_gxkh2")

[node name="Frog" type="Sprite2D" parent="Texture Node"]
texture = ExtResource("1_eyb4t")

[node name="Area2D" type="Area2D" parent="." groups=["frogs"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(15, 93)
shape = SubResource("CircleShape2D_b7ql0")

[node name="ProgressBar" type="ProgressBar" parent="."]
modulate = Color(1, 0.282353, 1, 1)
offset_left = -63.0
offset_top = 143.0
offset_right = 94.0
offset_bottom = 152.0
max_value = 200.0
value = 100.0
show_percentage = false

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_q0vnq")

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_b3upw")
volume_db = 5.0

[node name="AudioStreamPlayer2D3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_ijy05")

[node name="AudioStreamPlayer2D4" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_1lde7")

[node name="Puff" type="Sprite2D" parent="."]
z_index = 26
position = Vector2(9, 27)
scale = Vector2(1.34035, 1.34444)

[node name="Puff_anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xd8ab")
}

[node name="Hungry_anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_f555i")
}

[connection signal="button_down" from="FrogIntro/Sprite2D/Button" to="FrogIntro" method="_on_button_button_down"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
